--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   script(src='/javascripts/index.js')
   h1= title
   p Welcome to #{title}
-  div(id='mode')
+  button(id='mode')
   hr
   br
   div(id='chatbox')
